--- a/main.html
+++ b/main.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EUROTRAVEL</title>
+    
 
+</head>
+<body>
+    <h1>EUROTRAVEL</h1>
+    <div class="container"> 
 
+    </div>
+    
+</body>
 </html>
