changes main and style

--- a/main.html
+++ b/main.html
@@ -4,14 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EUROTRAVEL</title>
-    
-
+     <link rel="stylesheet" href="style.css">
+    <h1>EUROTRAVEL</h1>
+    <h2>Viajar nunca fue tan fácil.</h2>
+    <p>En Eurotravel te ofrecemos excursiones y aventuras listas para disfrutar. Solo tienes que elegir el destino, nosotros nos encargamos del resto. <strong>¡Prepárate para vivir tu próxima historia!</strong></p>
 </head>
 <body>
-    <h1>EUROTRAVEL</h1>
+    <seccion id="viaje1">
     <div class="container"> 
 
+        <div class="item1"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+
     </div>
+    </seccion>
+
+    <seccion id="viaje2">
+        <div class="item1"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+
+    </seccion>
+
+    <seccion id="viaje3">
+        <div class="item1"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+        <div class="item2"> </div>
+
+    </seccion>
     
 </body>
 </html>
