--- a/main.html
+++ b/main.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EUROTRAVEL</title>
      <link rel="stylesheet" href="style.css">
     <h1>EUROTRAVEL</h1>
-    <h2>Viajar nunca fue tan fácil.</h2>
+    <h2>Traveling was never so easy.</h2>
     <p>En Eurotravel te ofrecemos excursiones y aventuras listas para disfrutar. Solo tienes que elegir el destino, nosotros nos encargamos del resto. <strong>¡Prepárate para vivir tu próxima historia!</strong></p>
-</head>
-<body>
-    <seccion id="viaje1">
-    <div class="container"> 
+</header>
+<main>
 
-        <div class="item1"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
+ <section>
+ <h3 id="trip 1">Trip to the Tower Bridge </h3>
+    <p>Experience the iconic Tower Bridge in London with our exclusive tour package. Explore the history, architecture, and breathtaking views from the glass walkways. Perfect for families, couples, and solo travelers alike.</p>
+ <h3 id="trip 2">Football day </h3>
+    <p>Join us for an unforgettable football day experience! Whether you're a die-hard fan or just looking to enjoy the excitement of the game, our package includes tickets to a top match, stadium tour, and exclusive merchandise. Don't miss out on the action!</p>
+    <h3 id="trip 3">London Eye Experience </h3>
+    <p>See London from a new perspective with our London Eye Experience. Enjoy panoramic views of the city's skyline, including famous landmarks like Big Ben, Buckingham Palace, and the River Thames. Perfect for photography enthusiasts and sightseers alike.</p>
+  <h3 id="trip 2">Day in the farm </h3>
+    <p>Escape the hustle and bustle of city life with our Day in the Farm package. Experience the charm of rural living, interact with farm animals, and enjoy fresh, home-cooked meals. A perfect day out for families and nature lovers.</p>
+  <h3 id="trip 2">Museum Tour </h3>
+    <p>Discover the rich history and culture of London with our Museum Tour. Visit world-renowned museums such as the British Museum, the Natural History Museum, and the Victoria and Albert Museum. Guided tours and special exhibits included.</p>
+   
+ 
+ </section>
+ <aside>
+ <h2></h2>
+ <p>LONDON</p>
+ </aside>
 
-    </div>
-    </seccion>
-
-    <seccion id="viaje2">
-        <div class="item1"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-
-    </seccion>
-
-    <seccion id="viaje3">
-        <div class="item1"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-        <div class="item2"> </div>
-
-    </seccion>
     
-</body>
+</main>
 </html>
