Changes in footer and style

--- a/main.html
+++ b/main.html
@@ -29,7 +29,16 @@
  <h2></h2>
  <p>LONDON</p>
  </aside>
-
+ <footer>
+    <p>More about us </p>
+    <div class="social-icons">
+        <a href="#" class="icon">🌍</a>
+        <a href="#" class="icon">✈️</a>
+        <a href="#" class="icon">🏝️</a>
+    </div>
+    <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
+    <p class="footer-text">© 2025 Eurotravel - All rights reserved</p>
+</footer>
     
 </main>
 </html>
