--- a/main.html
+++ b/main.html
@@ -10,23 +10,56 @@
     <p>En Eurotravel te ofrecemos excursiones y aventuras listas para disfrutar. Solo tienes que elegir el destino, nosotros nos encargamos del resto. <strong>¡Prepárate para vivir tu próxima historia!</strong></p>
 </header>
 <main>
+
+ <section>
+    <h2>ACTIVITIES </h2>
+    <div class="contenedor">
+        <div class="img_contenedor">
+        <h3 class="item" id="trip 1">Trip to the Tower Bridge </h3>
+        <img src="towerbridge.jpeg" alt="imagen1">
+        </div>
+        <p class="item">Experience the iconic Tower Bridge in London with our exclusive tour package. Explore the history, architecture, and breathtaking views from the glass walkways. Perfect for families, couples, and solo travelers alike.</p>
+
+        <div class="img_contenedor">
+        <h3  class="item" id="trip 2">Football day </h3>
+        <img src="football.jpeg" alt="imagen2">
+        </div>
+        <p class="item">Join us for an unforgettable football day experience! Whether you're a die-hard fan or just looking to enjoy the excitement of the game, our package includes tickets to a top match, stadium tour, and exclusive merchandise. Don't miss out on the action!</p>
+
+        <div class="img_contenedor">
+        <h3 class="item" id="trip 3">London Eye Experience </h3>
+        <img src="londoneye.jpg" alt="imagen3">
+        </div>
+        <p class="item">See London from a new perspective with our London Eye Experience. Enjoy panoramic views of the city's skyline, including famous landmarks like Big Ben, Buckingham Palace, and the River Thames. Perfect for photography enthusiasts and sightseers alike.</p>
+
+        <div class="img_contenedor">
+        <h3 class="item" id="trip 2">Day in the farm </h3>
+        <img src="farm.webp" alt="imagen4">
+        </div>
+        <p class="item">Escape the hustle and bustle of city life with our Day in the Farm package. Experience the charm of rural living, interact with farm animals, and enjoy fresh, home-cooked meals. A perfect day out for families and nature lovers.</p>
+
+        <div class="img_contenedor">
+        <h3 class="item" id="trip 2">Museum Tour </h3>
+        <img src="londonmuseum.jpeg" alt="imagen5">
+        </div>
+        <p class="item">Discover the rich history and culture of London with our Museum Tour. Visit world-renowned museums such as the British Museum, the Natural History Museum, and the Victoria and Albert Museum. Guided tours and special exhibits included.</p>
+   </div>
+ 
+ </section>
  <aside>
  <h2></h2>
  <p>LONDON</p>
  </aside>
- <section>
- <h3 id="trip 1">Trip to the Tower Bridge </h3>
-    <p>Experience the iconic Tower Bridge in London with our exclusive tour package. Explore the history, architecture, and breathtaking views from the glass walkways. Perfect for families, couples, and solo travelers alike.</p>
- <h3 id="trip 2">Football day </h3>
-    <p>Join us for an unforgettable football day experience! Whether you're a die-hard fan or just looking to enjoy the excitement of the game, our package includes tickets to a top match, stadium tour, and exclusive merchandise. Don't miss out on the action!</p>
-    <h3 id="trip 3">London Eye Experience </h3>
-    <p>See London from a new perspective with our London Eye Experience. Enjoy panoramic views of the city's skyline, including famous landmarks like Big Ben, Buckingham Palace, and the River Thames. Perfect for photography enthusiasts and sightseers alike.</p>
-  <h3 id="trip 2">Day in the farm </h3>
-    <p>Escape the hustle and bustle of city life with our Day in the Farm package. Experience the charm of rural living, interact with farm animals, and enjoy fresh, home-cooked meals. A perfect day out for families and nature lovers.</p>
-  <h3 id="trip 2">Museum Tour </h3>
-    <p>Discover the rich history and culture of London with our Museum Tour. Visit world-renowned museums such as the British Museum, the Natural History Museum, and the Victoria and Albert Museum. Guided tours and special exhibits included.</p>
-   </section>
-
+ <footer>
+    <p>More about us </p>
+    <div class="social-icons">
+        <a href="#" class="icon">🌍</a>
+        <a href="#" class="icon">✈️</a>
+        <a href="#" class="icon">🏝️</a>
+    </div>
+    <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
+    <p class="footer-text">© 2025 Eurotravel - All rights reserved</p>
+</footer>
     
 </main>
 </html>
