--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <h2>Traveling was never so easy.</h2>
     <p>En Eurotravel te ofrecemos excursiones y aventuras listas para disfrutar. Solo tienes que elegir el destino, nosotros nos encargamos del resto. <strong>¡Prepárate para vivir tu próxima historia!</strong></p>
 </header>
-<main>
+<body>
 
  <section>
     <h2>ACTIVITIES </h2>
@@ -61,5 +61,6 @@
     <p class="footer-text">© 2025 Eurotravel - All rights reserved</p>
 </footer>
     
-</main>
+</body>
 </html>
+
