--- a/main.html
+++ b/main.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <header>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>EUROTRAVEL</title>
      <link rel="stylesheet" href="style.css">
     <h1>EUROTRAVEL</h1>
@@ -63,4 +65,5 @@
     
 </body>
 </html>
+
 
