--- a/new_travel.html
+++ b/new_travel.html
@@ -8,9 +8,9 @@
 </head>
 <body>  
     <header>
-        <nav class="navbar-expand-lg navbar-custom">
-            <h1>EUROTRAVEL</h1>    
-            <input type="text" placeholder="Buscar">
+        <nav class="navbar-custom d-flex">
+            <input type="text" placeholder="Buscar">    
+            <h1>EUROTRAVEL</h1>                   
         </nav>
     </header>  
     <p>12</p>
