--- a/detalle.html
+++ b/detalle.html
@@ -56,7 +56,7 @@
                   <li><strong>Time Span:</strong> 1 day</li>
                   <li><strong>Turistic guide:</strong> NO </li>
                 </ol>
-                <p class="item">Descripción de la actividad 4...</p>
+                <p class="item">We offer all kinds of experiences. In Marlow near London you will live and experience a farm(transportation and housing is included)</p>
                 <form class="d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
                     <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
@@ -70,7 +70,7 @@
                   <li><strong>Time Span:</strong> 2 days</li>
                   <li><strong>Turistic guide:</strong> NO </li>
                 </ol>
-                <p class="item">Descripción de la actividad 4...</p>
+                <p class="item">¿Are you a true football fan? If the answer is yes then we will organise you a trip to 4 stadiums and 3 matches, in what is the capital of football. </p>
                 <form class="d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
                     <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
@@ -83,7 +83,7 @@
                   <li><strong>Time Span:</strong> 4h</li>
                   <li><strong>Turistic guide:</strong> NO </li>
                 </ol>
-                <p class="item">Descripción de la actividad 4...</p>
+                <p class="item">The perfect place to see all London from up above. With us you can get the ticket cheaper than in the official website</p>
                 <form class="d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
                     <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
@@ -96,7 +96,7 @@
                   <li><strong>Time Span:</strong> 5h</li>
                   <li><strong>Turistic guide:</strong> YES </li>
                 </ol>
-                <p class="item">Descripción de la actividad 4...</p>
+                <p class="item">We know sometimes you want to go by yourself, but we doubt that you know more about the thousands of artefacts than our guide.</p>
                 <form class="d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
                     <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
@@ -109,7 +109,7 @@
                   <li><strong>Time Span:</strong> 30 min</li>
                   <li><strong>Turistic guide:</strong> NO </li>
                 </ol>
-                <p class="item">Descripción de la actividad 4...</p>
+                <p class="item">The most iconic and well known site in London is also offered by us. It is a must have.</p>
                 <form class="d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
                     <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
@@ -122,7 +122,7 @@
                   <li><strong>Time Span:</strong> 2h</li>
                   <li><strong>Turistic guide:</strong> YES </li>
                 </ol>
-                <p class="item">Descripción de la actividad 4...</p>
+                <p class="item">Our tour guide will show you this magnificent bridge crossing the Thames. Built in 1886 it is still breathtaking and feet of architecture, that people from all corners of the world come to visit</p>
                 <form class="d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
                     <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
