--- a/detalle.html
+++ b/detalle.html
@@ -3,143 +3,122 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Detalle</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css"> 
+    <title>EUROTRAVEL - London Trip</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-info text-dark"> 
-    <header class="bg-dark text-white text-center py-3 mb-4">
-        <h1 class="mb-0">Eurotravel</h1>
-        <p class="lead mb-0">Your gateway to unforgettable journeys</p>
-    </header>
- <main class="container my-5">
-        <div class="list-group-item list-group-item-action mb-5 p-4 rounded shadow">
-             <h3 class="text-center mb-4">LONDON</h3>
-             <img src="fotopuente.png" id="imagen" class="img-fluid rounded shadow-sm mx-auto d-block mb-4" alt="Puente de Londres">
+
+<body>
+
+   
+    <main class="container my-5">
+        <div class="list-group-item list-group-item-action mb-5 p-4 rounded shadow" id ="secion1">
+            <h3 class="text-center mb-4">LONDON</h3>
+            <img src="fotopuente.png" id="imagen" class="img-fluid rounded shadow-sm mx-auto d-block mb-4" alt="Puente de Londres">
             <ul class="list-unstyled text-center mb-4">
-                <li>
-                    <i class="bi bi-clock"></i> 
-                    <strong>Duration:</strong> 5 days
-                </li>
-                <li>
-                    <i class="bi bi-currency-euro"></i> 
-                    <strong>Price:</strong> 700$
-                </li>
-                <li>
-                    <i class="bi bi-people"></i> 
-                    <strong>Max packages:</strong> 5
-                </li>
-                <li>
-                    <i class="bi bi-check-circle"></i> 
-                    <strong>Availability: </strong> Yes 
-                </li>
+                <li><i class="bi bi-clock"></i> <strong>Duration:</strong> 5 days</li>
+                <li><i class="bi bi-currency-euro"></i> <strong>Price:</strong> 700$</li>
+                <li><i class="bi bi-people"></i> <strong>Max packages:</strong> 5</li>
+                <li><i class="bi bi-check-circle"></i> <strong>Availability:</strong> Yes</li>
             </ul>
-                <div class="text-center mb-4">
-                <span class="badge bg-secondary me-2"><strong>Leisure trip</strong></span> 
-                <span class="badge bg-success me-2"><strong>Flight included</strong></span> 
+            <div class="text-center mb-4">
+                <span class="badge bg-secondary me-2"><strong>Leisure trip</strong></span>
+                <span class="badge bg-success me-2"><strong>Flight included</strong></span>
                 <span class="badge bg-warning text-dark"><strong>International</strong></span>
             </div>
-            
-            <form class="d-flex justify-content-center"> 
-                <button type="button" class="btn btn-primary btn-lg me-2">Main Page</button>
+            <div class="d-flex justify-content-center">
+                <button href="main.html" type="button" class="btn btn-primary btn-lg me-2">Main Page</button>
                 <button type="button" class="btn btn-primary btn-lg me-2">Edit the trip</button>
                 <button type="button" class="btn btn-primary btn-lg">Delete the trip</button>
-            </form>
-        </div> 
-            <div class="row">
-            <div class="col-12 col-md-6 mb-4">
-                <h3 class="text-center">Farm day</h3>
-                <ol>
-                  <li><strong>Fee:</strong> 80$</li>
-                  <li><strong>Time Span:</strong> 1 day</li>
-                  <li><strong>Turistic guide:</strong> NO </li>
-                </ol>
-                <p class="item">We offer all kinds of experiences. In Marlow near London you will live and experience a farm(transportation and housing is included)</p>
-                <form class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
-                    <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
-                </form>
-            </div> 
-            
-            <div class="col-12 col-md-6 mb-4">
-                <h3 class="text-center">Football hopping</h3>
-                <ol>
-                  <li><strong>Fee:</strong> 200$</li>
-                  <li><strong>Time Span:</strong> 2 days</li>
-                  <li><strong>Turistic guide:</strong> NO </li>
-                </ol>
-                <p class="item">¿Are you a true football fan? If the answer is yes then we will organise you a trip to 4 stadiums and 3 matches, in what is the capital of football. </p>
-                <form class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
-                    <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
-                </form>
             </div>
-            <div class="col-12 col-md-6 mb-4">
-                <h3 class="text-center">London Eye</h3>
-                <ol>
-                  <li><strong>Fee:</strong> 20$</li>
-                  <li><strong>Time Span:</strong> 4h</li>
-                  <li><strong>Turistic guide:</strong> NO </li>
-                </ol>
-                <p class="item">The perfect place to see all London from up above. With us you can get the ticket cheaper than in the official website</p>
-                <form class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
-                    <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
-                </form>
+        </div>
+        <h2 class="mb-4 text-center">Activities</h2>
+        <div class="row g-4">
+
+            <div class="col-12 col-md-6">
+                <div class="p-4 bg-white rounded shadow h-100">
+                    <h3 class="text-center">Farm day</h3>
+                    <ol>
+                        <li><strong>Fee:</strong> 80$</li>
+                        <li><strong>Time Span:</strong> 1 day</li>
+                        <li><strong>Turistic guide:</strong> NO</li>
+                    </ol>
+                    <p class="item">We offer all kinds of experiences. In Marlow near London you will live and experience a farm (transportation and housing included).</p>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-secondary me-2">Edit the activity</button>
+                        <button class="btn btn-secondary">Delete the activity</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-12 col-md-6 mb-4">
-                <h3 class="text-center">London Natural Museum</h3>
-                <ol>
-                  <li><strong>Fee:</strong> 10$</li>
-                  <li><strong>Time Span:</strong> 5h</li>
-                  <li><strong>Turistic guide:</strong> YES </li>
-                </ol>
-                <p class="item">We know sometimes you want to go by yourself, but we doubt that you know more about the thousands of artefacts than our guide.</p>
-                <form class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
-                    <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
-                </form>
+
+            <div class="col-12 col-md-6">
+                <div class="p-4 bg-white rounded shadow h-100">
+                    <h3 class="text-center">Football hopping</h3>
+                    <ol>
+                        <li><strong>Fee:</strong> 200$</li>
+                        <li><strong>Time Span:</strong> 2 days</li>
+                        <li><strong>Turistic guide:</strong> NO</li>
+                    </ol>
+                    <p class="item">Are you a true football fan? Then we will organise a trip to 4 stadiums and 3 matches in the capital of football.</p>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-secondary me-2">Edit the activity</button>
+                        <button class="btn btn-secondary">Delete the activity</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-12 col-md-6 mb-4">
-                <h3 class="text-center">Big Ben</h3>
-                <ol>
-                  <li><strong>Fee:</strong> 15$</li>
-                  <li><strong>Time Span:</strong> 30 min</li>
-                  <li><strong>Turistic guide:</strong> NO </li>
-                </ol>
-                <p class="item">The most iconic and well known site in London is also offered by us. It is a must have.</p>
-                <form class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
-                    <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
-                </form>
+
+            <div class="col-12 col-md-6">
+                <div class="p-4 bg-white rounded shadow h-100">
+                    <h3 class="text-center">London Eye</h3>
+                    <ol>
+                        <li><strong>Fee:</strong> 20$</li>
+                        <li><strong>Time Span:</strong> 4h</li>
+                        <li><strong>Turistic guide:</strong> NO</li>
+                    </ol>
+                    <p class="item">The perfect place to see all London from above. With us you can get the ticket cheaper than on the official website.</p>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-secondary me-2">Edit the activity</button>
+                        <button class="btn btn-secondary">Delete the activity</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-12 col-md-6 mb-4">
-                <h3 class="text-center">Tower Bridge</h3>
-               <ol>
-                  <li><strong>Fee:</strong> 10$</li>
-                  <li><strong>Time Span:</strong> 2h</li>
-                  <li><strong>Turistic guide:</strong> YES </li>
-                </ol>
-                <p class="item">Our tour guide will show you this magnificent bridge crossing the Thames. Built in 1886 it is still breathtaking and feet of architecture, that people from all corners of the world come to visit</p>
-                <form class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-secondary btn-md">Edit the activity</button>
-                    <button type="button" class="btn btn-secondary btn-md">Delete the activity</button>
-                </form>
-            </div> 
-              </div> 
-    </section>
+
+            <div class="col-12 col-md-6">
+                <div class="p-4 bg-white rounded shadow h-100">
+                    <h3 class="text-center">Tower Bridge</h3>
+                    <ol>
+                        <li><strong>Fee:</strong> 10$</li>
+                        <li><strong>Time Span:</strong> 2h</li>
+                        <li><strong>Turistic guide:</strong> YES</li>
+                    </ol>
+                    <p class="item">Our tour guide will show you this magnificent bridge crossing the Thames. Built in 1886 it is still breathtaking and a feat of architecture.</p>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-secondary me-2">Edit the activity</button>
+                        <button class="btn btn-secondary">Delete the activity</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="bg-dark text-white text-center py-4 mt-5">
+        <div class="container-fluid">
+            <p><strong>EuroTravel</strong> · Madrid, España</p>
+            <p>✉️ info@eurotravel.com · ☎️ +34 600 123 456</p>
+            <a href="#" class="icon">🌍</a>
+            <a href="#" class="icon">✈️</a>
+            <a href="#" class="icon">🏝️</a>
+            <p>
+                <a href="#" class="text-white text-decoration-underline">Política de privacidad</a> |
+                <a href="#" class="text-white text-decoration-underline">Términos</a>
+            </p>
+            <a href="https://github.com/CodeURJC-FW-2025-26/webapp15" class="text-white text-decoration-underline">link portfolio</a>
+            <p class="footer-text mb-0">© 2025 Eurotravel - All rights reserved</p>
+        </div>
+    </footer>
+
 </body>
-<footer>
-    <p>More about us </p>
-    <div class="social-icons">
-        <a href="#" class="icon">🌍</a>
-        <a href="#" class="icon">✈️</a>
-        <a href="#" class="icon">🏝️</a>
-    </div>
-    <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
-    <p class="footer-text">© 2025 Eurotravel - All rights reserved</p>
-</footer>
 </html>
+
 
