--- a/detalle.html
+++ b/detalle.html
@@ -10,8 +10,22 @@
 </head>
 
 <body>
-
-   
+    <header>
+        <nav class="navbar-custom d-flex">
+            <div class="dropdown">
+                <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                    Catálogo
+                </button>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item" href="#">Países</li>
+                    <li class="dropdown-item" href="#">Actividades</li>
+                    <li class="dropdown-item" href="#">Tarifas</li>
+                </ul>               
+            </div>           
+                <input type="text" placeholder="Buscar"> 
+                <h1>EUROTRAVEL</h1>                  
+        </nav>
+    </header>
     <main class="container my-5">
         <div class="list-group-item list-group-item-action mb-5 p-4 rounded shadow" id ="secion1">
             <h3 class="text-center mb-4">LONDON</h3>
