--- a/new_travel.html
+++ b/new_travel.html
@@ -34,7 +34,7 @@
                 <input type="number" id="duration" name="duration" min="0" max="100" step="1" placeholder="0 días">
 
                 <label for="image">Imágen:</label>
-                <input type="url" id="image" name="image">
+                <input type="url" id="image" name="image" placeholder="jpeg jpg or png">
 
                 <label for="price">Precio (€):</label>
                 <input type="number" id="price" name="price" min="0" max="100000" step="200" placeholder="0€">
