--- a/main.html
+++ b/main.html
@@ -10,7 +10,22 @@
 </head>
 
 <body>
-
+<header>
+        <nav class="navbar-custom d-flex">
+            <div class="dropdown">
+                <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                    Catálogo
+                </button>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item" href="#">Países</li>
+                    <li class="dropdown-item" href="#">Actividades</li>
+                    <li class="dropdown-item" href="#">Tarifas</li>
+                </ul>               
+            </div>           
+                <input type="text" placeholder="Buscar"> 
+                <h1>EUROTRAVEL</h1>                  
+        </nav>
+    </header>
     <section id="cabecera">
     <h2>Traveling was never so easy.</h2>
     <p>In Eurotravel we ofered excursions and adventures ready for enjoy. You only have to choose the destiny, we take care of trouble. <strong>¡Get ready to write your next story with us!</strong></p>
