all button and few style changes

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 <section class="container my-5">
 
   <h2 class="">ACTIVITIES</h2>
-  <a href="crear.html" class="btn btn-primary">Add new activity</a>
+  <a href="crear.html" class="btn button btn-dark">Add new activity</a>
   <div class="row g-4">
     
     <div class="col-12 col-sm-6 col-lg-4">
