--- a/detalle.html
+++ b/detalle.html
@@ -42,9 +42,9 @@
                 <span class="badge bg-warning text-dark"><strong>International</strong></span>
             </div>
             <div class="d-flex justify-content-center">
-                <button href="main.html" type="button" class="btn btn-primary btn-lg me-2">Main Page</button>
-                <button type="button" class="btn btn-primary btn-lg me-2">Edit the trip</button>
-                <button type="button" class="btn btn-primary btn-lg">Delete the trip</button>
+                <button href="main.html" type="button" class="button btn btn-dark btn-lg me-2">Main Page</button>
+                <button type="button" class="button btn btn-dark btn-lg me-2">Edit the trip</button>
+                <button type="button" class="button btn btn-dark btn-lg">Delete the trip</button>
             </div>
         </div>
         <h2 class="mb-4 text-center">Activities</h2>
@@ -60,10 +60,10 @@
                     </ol>
                     <p class="item">We offer all kinds of experiences. In Marlow near London you will live and experience a farm (transportation and housing included).</p>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-secondary me-2">Edit the activity</button>
-                        <button class="btn btn-secondary">Delete the activity</button>
+                        <button class="button button2 btn btn-dark me-2">Edit the activity</button>
+                        <button class="button button2 btn btn-dark">Delete the activity</button>
                     </div>
-                </div>
+                </div>button 
             </div>
 
             <div class="col-12 col-md-6">
@@ -76,8 +76,8 @@
                     </ol>
                     <p class="item">Are you a true football fan? Then we will organise a trip to 4 stadiums and 3 matches in the capital of football.</p>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-secondary me-2">Edit the activity</button>
-                        <button class="btn btn-secondary">Delete the activity</button>
+                        <button class="button button2 btn btn-dark me-2">Edit the activity</button>
+                        <button class="button button2 btn btn-dark">Delete the activity</button>
                     </div>
                 </div>
             </div>
@@ -92,8 +92,8 @@
                     </ol>
                     <p class="item">The perfect place to see all London from above. With us you can get the ticket cheaper than on the official website.</p>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-secondary me-2">Edit the activity</button>
-                        <button class="btn btn-secondary">Delete the activity</button>
+                        <button class="button button2 btn btn-dark me-2">Edit the activity</button>
+                        <button class="button button2 btn btn-dark">Delete the activity</button>
                     </div>
                 </div>
             </div>
@@ -108,8 +108,8 @@
                     </ol>
                     <p class="item">Our tour guide will show you this magnificent bridge crossing the Thames. Built in 1886 it is still breathtaking and a feat of architecture.</p>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-secondary me-2">Edit the activity</button>
-                        <button class="btn btn-secondary">Delete the activity</button>
+                        <button class="button button2 btn btn-dark me-2">Edit the activity</button>
+                        <button class="button button2 btn btn-dark">Delete the activity</button>
                     </div>
                 </div>
             </div>
@@ -151,6 +151,8 @@
 
                 <label for="max_travellers">Personas:</label>
                 <input type="number" id="max_travellers" name="max_travellers" min="0" max="100" step="1" placeholder="1">
+
+                <button type="submit" class="btn button btn-dark">Crear</button>
             </form>
         </div>
     </div>
