--- a/new_travel.html
+++ b/new_travel.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style_newTravel.css">
+    <title>EUROTRAVEL - New travel</title>
 </head>
 <body>  
     <header>
@@ -59,6 +60,8 @@
 
                 <label for="max_travellers">Personas:</label>
                 <input type="number" id="max_travellers" name="max_travellers" min="0" max="100" step="1" placeholder="1">
+                
+                <button type="submit" class="btn button btn-dark">Crear</button>
             </form>
         </div>
     </div>
