--- a/new_travel.html
+++ b/new_travel.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>    
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style_newTravel.css">
@@ -65,7 +66,6 @@
             </form>
         </div>
     </div>
-</body>
 <footer>
     <p><strong>EuroTravel</strong> · Madrid, España</p>
     <p>✉️ info@eurotravel.com · ☎️ +34 600 123 456</p>
@@ -83,4 +83,6 @@
     <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
     <p class="footer-text">© 2025 Eurotravel - All rights reserved</p>
 </footer>
+</body>
+
 </html>
