cancel button added

--- a/new_travel.html
+++ b/new_travel.html
@@ -63,6 +63,7 @@
                 <input type="number" id="max_travellers" name="max_travellers" min="0" max="100" step="1" placeholder="1">
                 
                 <button type="submit" class="btn button btn-dark">Crear</button>
+                <a href="main.html" class="btn button btn-dark">Cancelar</a> 
             </form>
         </div>
     </div>
