--- a/detalle.html
+++ b/detalle.html
@@ -63,7 +63,7 @@
                         <button class="button button2 btn btn-dark me-2">Edit the activity</button>
                         <button class="button button2 btn btn-dark">Delete the activity</button>
                     </div>
-                </div>button 
+                </div>
             </div>
 
             <div class="col-12 col-md-6">
