--- a/detalle.html
+++ b/detalle.html
@@ -58,7 +58,7 @@
                         <li><strong>Time Span:</strong> 1 day</li>
                         <li><strong>Turistic guide:</strong> NO</li>
                     </ol>
-                    <p class="item">We offer all kinds of experiences. In Marlow near London you will live and experience a farm (transportation and housing included).</p>
+                    <p class="item">We offer all kinds of experiences. In Marlow near London you will live and experience a farm (transportation included).</p>
                     <div class="d-flex justify-content-center">
                         <button class="button button2 btn btn-dark me-2">Edit the activity</button>
                         <button class="button button2 btn btn-dark">Delete the activity</button>
@@ -106,7 +106,7 @@
                         <li><strong>Time Span:</strong> 2h</li>
                         <li><strong>Turistic guide:</strong> YES</li>
                     </ol>
-                    <p class="item">Our tour guide will show you this magnificent bridge crossing the Thames. Built in 1886 it is still breathtaking and a feat of architecture.</p>
+                    <p class="item">Our tour guide will show you this magnificent bridge crossing the Thames. Built in 1886 it is still breathtaking.</p>
                     <div class="d-flex justify-content-center">
                         <button class="button button2 btn btn-dark me-2">Edit the activity</button>
                         <button class="button button2 btn btn-dark">Delete the activity</button>
@@ -174,5 +174,7 @@
 
 </body>
 </html>
+
+
 
 
