button info fixed

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>EUROTRAVEL</title>
     <link rel="stylesheet" href="style.css">
     
@@ -14,12 +15,12 @@
         <nav class="navbar-custom d-flex">
             <div class="dropdown">
                 <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                    Catálogo
+                    Info
                 </button>
                 <ul class="dropdown-menu">
-                    <li class="dropdown-item" href="#">Países</li>
-                    <li class="dropdown-item" href="#">Actividades</li>
-                    <li class="dropdown-item" href="#">Tarifas</li>
+                    <li class="dropdown-item" href="#">Countries</li>
+                    <li class="dropdown-item" href="#">Activities</li>
+                    <li class="dropdown-item" href="#">Prices</li>
                 </ul>               
             </div>           
                 <input type="text" placeholder="Buscar"> 
