--- a/new_travel.html
+++ b/new_travel.html
@@ -18,7 +18,7 @@
                 <ul class="dropdown-menu">
                     <li class="dropdown-item" href="#">Countries</li>
                     <li class="dropdown-item" href="#">Activities</li>
-                    <li class="dropdown-item" href="#">Sales rates</li>
+                    <li class="dropdown-item" href="#">Prices</li>
                 </ul>               
             </div>           
                 <input type="text" placeholder="Buscar"> 
