--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>EUROTRAVEL</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_main.css">
     
 </head>
 
