--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
 
 <section class="container my-5">
 
-  <h2 class="">ACTIVITIES</h2>
-  <a href="crear.html" class="btn button btn-dark">Add new activity</a>
+  <h2 class="">TRIP</h2>
+  <a href="new_travel.html" class="btn button btn-dark">Add new trip</a>
   <div class="row g-4">
     
     <div class="col-12 col-sm-6 col-lg-4">
