--- a/new_travel.html
+++ b/new_travel.html
@@ -27,7 +27,7 @@
     </header>  
     <div class="form-align">
         <div class="form-container">
-            <h2>Nuevo Viaje</h2>
+            <h2>New trip</h2>
             <form>
                 <label for="main_city">Main city:</label>
                 <input type="text" id="main_city" name="main_city">
