--- a/new_travel.html
+++ b/new_travel.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="checkbox-group">
-                    <label for="national">Is it national?</label>
+                    <label for="national">Is it international?</label>
                     <input type="checkbox" id="national" name="national">
                 </div>
 
