--- a/detalle.html
+++ b/detalle.html
@@ -43,7 +43,7 @@
                 <span class="badge bg-warning text-dark"><strong>International</strong></span>
             </div>
             <div class="d-flex justify-content-center">
-                <button href="main.html" type="button" class="button btn btn-dark btn-lg me-2">Main Page</button>
+                <a href="main.html" class="button btn btn-dark btn-lg me-2">Main Page</a>
                 <button type="button" class="button btn btn-dark btn-lg me-2">Edit the trip</button>
                 <button type="button" class="button btn btn-dark btn-lg">Delete the trip</button>
             </div>
