--- a/detalle.html
+++ b/detalle.html
@@ -127,10 +127,11 @@
                 <input type="number" id="duration" name="duration" min="0" max="12" step="1" placeholder="3 horas">
 
                 <label for="price">Fee(€):</label>
-                <input type="number" id="fee" name="fee" min="0" max="100000" step="200" placeholder="0€">
+                <input type="number" id="price" name="price" min="0" max="100000" step="200" placeholder="0€">
 
-                <label for="description">Description of the activity:</label>
-                <input type="text" id="description_activity" name="description_activity">
+                
+                <label for="description_activity">Description of the activity:</label>
+                <texarea id="description_activity" name="description_activity" rows="4" cols="40" placeholder="Insert text"></textarea>
 
                 <label for="guide_travel">Guide:</label>
                 <select id="guide_travel" name="guide_travel">
