--- a/detalle.html
+++ b/detalle.html
@@ -23,7 +23,7 @@
                     <li class="dropdown-item" href="#">Prices</li>
                 </ul>               
             </div>           
-                <input type="text" placeholder="Buscar"> 
+                <input type="text" placeholder="Search"> 
                 <h1>EUROTRAVEL</h1>                  
         </nav>
     </header>
