--- a/detalle.html
+++ b/detalle.html
@@ -129,9 +129,8 @@
                 <label for="price">Fee(€):</label>
                 <input type="number" id="price" name="price" min="0" max="100000" step="200" placeholder="0€">
 
-                
                 <label for="description_activity">Description of the activity:</label>
-                <texarea id="description_activity" name="description_activity" rows="4" cols="40" placeholder="Insert text"></textarea>
+                <textarea id="description_activity" name="description_activity" rows="4" cols="40" placeholder="Insert text"></textarea>
 
                 <label for="guide_travel">Guide:</label>
                 <select id="guide_travel" name="guide_travel">
