--- a/detalle.html
+++ b/detalle.html
@@ -18,9 +18,9 @@
                     Info
                 </button>
                 <ul class="dropdown-menu">
-                    <li class="dropdown-item" href="#">Countries</li>
-                    <li class="dropdown-item" href="#">Activities</li>
-                    <li class="dropdown-item" href="#">Prices</li>
+                    <li class="dropdown-item">Countries</li>
+                    <li class="dropdown-item">Activities</li>
+                    <li class="dropdown-item">Prices</li>
                 </ul>               
             </div>           
                 <input type="text" placeholder="Search"> 
