--- a/detalle.html
+++ b/detalle.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main class="container my-5">
-        <div class="list-group-item list-group-item-action mb-5 p-4 rounded shadow" id ="secion1">
+        <div class="list-group-item list-group-item-action mb-5  rounded shadow" id ="secion1">
             <h3 class="text-center mb-4">LONDON</h3>
             <img src="fotopuente.png" id="imagen" class="img-fluid rounded shadow-sm mx-auto d-block mb-4" alt="Puente de Londres">
             <ul class="list-unstyled text-center mb-4">
@@ -51,7 +51,7 @@
         <h2 class="mb-4 text-center">Activities</h2>
         <div class="row g-4">
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 col-sm-2" >
                 <div class="p-4 bg-white rounded shadow h-100">
                     <h3 class="text-center">Farm day</h3>
                     <ol>
@@ -67,7 +67,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 col-sm-2">
                 <div class="p-4 bg-white rounded shadow h-100">
                     <h3 class="text-center">Football hopping</h3>
                     <ol>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 col-sm-2">
                 <div class="p-4 bg-white rounded shadow h-100">
                     <h3 class="text-center">London Eye</h3>
                     <ol>
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 col-sm-2">
                 <div class="p-4 bg-white rounded shadow h-100">
                     <h3 class="text-center">Tower Bridge</h3>
                     <ol>
