responsive footer modification

--- a/detalle.html
+++ b/detalle.html
@@ -144,21 +144,43 @@
             </form>
         </div>
     </div>
-    <footer>
-        
-            <p><strong>EuroTravel</strong> · Madrid, Spain</p>
-            <p>✉️ info@eurotravel.com · ☎️ +34 600 123 456</p>
-            <a href="#" class="icon">🌍</a>
-            <a href="#" class="icon">✈️</a>
-            <a href="#" class="icon">🏝️</a>
-            <p>
-                <a href="#" class="text-white text-decoration-underline">Privacy policy</a> |
-                <a href="#" class="text-white text-decoration-underline">Terms</a>
-            </p>
-            <a href="https://github.com/CodeURJC-FW-2025-26/webapp15" class="text-white text-decoration-underline">link portfolio</a>
-            <p class="footer-text mb-0">© 2025 Eurotravel - All rights reserved</p>
-        
-    </footer>
+<footer>
+    <div class="row g-4 d-flex justify-content-center">
+
+    <div class="col-12 col-sm-6 col-lg-4 text-center">
+        <p><strong>EuroTravel</strong> · Madrid, Spain</p>
+    </div>
+
+    <div class="col-12 col-sm-6 col-lg-4 text-center">
+        <p>✉️ info@eurotravel.com </p>
+    </div>
+
+    <div class="col-12 col-sm-6 col-lg-4 text-center">
+        <p>☎️ +34 600 123 456</p>
+    </div>
+
+    <div class="col-12 col-sm-6 col-lg-4 text-center">
+    <div class="footer-icons">
+        <a href="#" class="icon">🌍</a>
+        <a href="#" class="icon">✈️</a>
+        <a href="#" class="icon">🏝️</a>
+    </div>
+    </div>
+
+    <div class="col-12 col-sm-6 col-lg-4 text-center">
+    <p>
+        <a href="#">Terms</a>|
+        <a href="#">Privacy Policy</a>
+    </p>
+    </div>
+
+    <div class="col-12 col-sm-6 col-lg-4 text-center">
+        <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
+    </div>
+
+    </div> <p class="footer-text text-center">© 2025 Eurotravel - All rights reserved</p>
+
+</footer>
 
 </body>
 </html>
