--- a/detalle.html
+++ b/detalle.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main class="container my-5">
-        <div class="list-group-item list-group-item-action mb-5  rounded shadow" id ="secion1">
+        <div class="list-group-item list-group-item-action mb-5 rounded shadow" id ="secion1">
             <h3 class="text-center mb-4">LONDON</h3>
             <img src="fotopuente.png" id="imagen" class="img-fluid rounded shadow-sm mx-auto d-block mb-4" alt="Puente de Londres">
             <ul class="list-unstyled text-center mb-4">
@@ -38,9 +38,9 @@
                 <li><i class="bi bi-check-circle"></i> <strong>Availability:</strong> Yes</li>
             </ul>
             <div class="text-center mb-4">
-                <span class="badge bg-secondary me-2"><strong>Leisure trip</strong></span>
-                <span class="badge bg-success me-2"><strong>Flight included</strong></span>
-                <span class="badge bg-warning text-dark"><strong>International</strong></span>
+                <span class="badge bg-secondary"><strong>Leisure trip</strong></span>
+                <span class="badge bg-success "><strong>Flight included</strong></span>
+                <span class="badge bg-warning"><strong>International</strong></span>
             </div>
             <div class="d-flex justify-content-center">
                 <a href="main.html" class="button btn btn-dark btn-lg me-2">Main Page</a>
@@ -52,7 +52,7 @@
         <div class="row g-4">
 
             <div class="col-12 col-md-6 col-sm-2" >
-                <div class="p-4 bg-white rounded shadow h-100">
+                <div class="p-4 bg-white rounded shadow">
                     <h3 class="text-center">Farm day</h3>
                     <ol>
                         <li><strong>Fee:</strong> 80€</li>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-sm-2">
-                <div class="p-4 bg-white rounded shadow h-100">
+                <div class="p-4 bg-white rounded shadow">
                     <h3 class="text-center">Football hopping</h3>
                     <ol>
                         <li><strong>Fee:</strong> 200€</li>
