--- a/detalle.html
+++ b/detalle.html
@@ -43,8 +43,8 @@
                 <span class="badge bg-warning"><strong>International</strong></span>
             </div>
             <div class="d-flex justify-content-center">
-                <a href="main.html" class="button btn btn-dark btn-lg me-2">Main Page</a>
-                <button type="button" class="button btn btn-dark btn-lg me-2">Edit the trip</button>
+                <a href="main.html" class="button btn btn-dark btn-lg">Main Page</a>
+                <button type="button" class="button btn btn-dark btn-lg">Edit the trip</button>
                 <button type="button" class="button btn btn-dark btn-lg">Delete the trip</button>
             </div>
         </div>
@@ -84,7 +84,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-sm-2">
-                <div class="p-4 bg-white rounded shadow h-100">
+                <div class="p-4 bg-white rounded shadow">
                     <h3 class="text-center">London Eye</h3>
                     <ol>
                         <li><strong>Fee:</strong> 20€</li>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-sm-2">
-                <div class="p-4 bg-white rounded shadow h-100">
+                <div class="p-4 bg-white rounded shadow">
                     <h3 class="text-center">Tower Bridge</h3>
                     <ol>
                         <li><strong>Fee:</strong> 10€</li>
