--- a/detalle.html
+++ b/detalle.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>EUROTRAVEL - London Trip</title>
+    <title>GoTravel - London Trip</title>
     <link rel="stylesheet" href="style_detalle.css">
 </head>
 
@@ -24,7 +24,7 @@
                 </ul>               
             </div>           
                 <input type="text" placeholder="Search"> 
-                <h1>EUROTRAVEL</h1>                  
+                <h1>GoTravel</h1>                  
         </nav>
     </header>
     <main class="container my-5">
@@ -148,11 +148,11 @@
     <div class="row g-4 d-flex justify-content-center">
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-        <p><strong>EuroTravel</strong> · Madrid, Spain</p>
+        <p><strong>GoTravel</strong> · Madrid, Spain</p>
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-        <p>✉️ info@eurotravel.com </p>
+        <p>✉️ info@gotravel.com </p>
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
@@ -178,7 +178,7 @@
         <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
     </div>
 
-    </div> <p class="footer-text text-center">© 2025 Eurotravel - All rights reserved</p>
+    </div> <p class="footer-text text-center">© 2025 GoTravel - All rights reserved</p>
 
 </footer>
 
