--- a/new_travel.html
+++ b/new_travel.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style_newTravel.css">
-    <title>EUROTRAVEL - New travel</title>
+    <title>GoTravel - New travel</title>
 </head>
 <body>  
     <header>
@@ -22,7 +22,7 @@
                 </ul>               
             </div>           
                 <input type="text" placeholder="Search"> 
-                <h1>EUROTRAVEL</h1>                  
+                <h1>GoTravel</h1>                  
         </nav>
     </header>  
     <div class="form-align">
@@ -71,11 +71,11 @@
     <div class="row g-4 d-flex justify-content-center">
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-        <p><strong>EuroTravel</strong> · Madrid, Spain</p>
+        <p><strong>GoTravel</strong> · Madrid, Spain</p>
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-        <p>✉️ info@eurotravel.com </p>
+        <p>✉️ info@gotravel.com </p>
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
@@ -101,7 +101,7 @@
         <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
     </div>
 
-    </div> <p class="footer-text text-center">© 2025 Eurotravel - All rights reserved</p>
+    </div> <p class="footer-text text-center">© 2025 Gotravel - All rights reserved</p>
 
 </footer>
 </body>
