--- a/detalle.html
+++ b/detalle.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>GoTravel - London Trip</title>
-    <link rel="stylesheet" href="style_detalle.css">
+    <link rel="stylesheet" href="style_full.css">
 </head>
 
 <body>
